[gd_scene load_steps=2 format=3 uid="uid://baaxsj75dblww"]

[ext_resource type="Script" uid="uid://cqwgascbqscr2" path="res://UI/main_menu.gd" id="1_uahxu"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_uahxu")

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 450.0
offset_top = 200.0
offset_right = 650.0
offset_bottom = 275.0
text = "Start Game"

[node name="Setting" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 450.0
offset_top = 300.0
offset_right = 650.0
offset_bottom = 375.0
text = "Setting"

[node name="Quit" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 450.0
offset_top = 400.0
offset_right = 650.0
offset_bottom = 475.0
text = "Quit Game"

[connection signal="pressed" from="ButtonManager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ButtonManager/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="ButtonManager/Quit" to="." method="_on_quit_pressed"]
